Update submodule to myself

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "mri"]
 	path = mri
-	url = git@github.com:adamgreen/mri.git
+	url = git@github.com:JaredCJR/mri.git
 [submodule "CrashCatcher"]
 	path = CrashCatcher
-	url = https://github.com/adamgreen/CrashCatcher.git
+	url = https://github.com/JaredCJR/CrashCatcher.git
